# rcp_client

./: .gitignore  CBINDGEN_EXPLAINED.md  CHANGELOG.md  CI_CD_PROCESS.md  DEVELOPMENT.md  FFI_BRIDGE_DOCS.md  INTEGRATION.md  MIGRATION_PLAN.md  NATIVE_LIBRARY_SETUP.md  README.md  RELEASE.md  analysis_options.yaml  build_macos.sh  build_rust_bridge.sh  check_dependencies.sh  copy_macos_libs.sh  copy_native_libs.sh  copy_native_libs.sh.bak  migrate.sh  pubspec.yaml  setup_dev_environment.sh
.github/workflows/: README.md  build-release.yml  build.yml  changelog.yml  ci.yml  release.yml
android/app/: build.gradle.kts
ci/: setup_ci.sh  setup_flutter_env.sh
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: app_info.dart  app_state.dart  user.dart
lib/screens/: app_launcher_screen.dart  connection_screen.dart  login_screen.dart  streaming_screen.dart
lib/services/: auth_service.dart  rcp_bridge.dart  rcp_service.dart  settings_service.dart
lib/utils/: constants.dart  copy_native_libs.dart  ffi_bridge.dart  helpers.dart  library_utils.dart  native_library.dart  native_library_manager.dart  theme.dart
lib/widgets/: app_card.dart  copyable_error_message.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: ci-signing-override.xcconfig
macos/Runner/: Info.plist
rust/: Cargo.toml
rust/src/: lib.rs
rust_bridge/: CBINDGEN_CONFIG_DOCS.md  Cargo.toml  bindings.h  build.rs  cbindgen.toml
rust_bridge/src/: lib.rs
scripts/: README.md
test/: widget_test.dart
windows/: CMakeLists.txt
(+12 files in other folders)
