[package]
name = "rcp_flutter_bridge"
version = "0.1.0"
edition = "2021"
authors = ["RCP Team"]
license = "MIT"
repository = "https://github.com/open-rcp/rcp"
homepage = "https://github.com/open-rcp/rcp"

[lib]
name = "rcp_flutter_bridge"
crate-type = ["cdylib"]

[dependencies]
# Add dependencies on the RCP client libraries here
# rcp_client = { path = "../../rcpc" }
