[package]
name = "rcpb"
version = "0.1.0"
edition = "2021"

[lib]
name = "rcpb"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# No direct dependencies on RCP components yet
# Will implement standalone functionality for now
# TODO: Use crates.io versions when available
# rcpp = "0.1.0"
# rcpc = "0.1.0"

# FFI support
ffi = "0.1.1"

# Only include necessary dependencies
tokio = { version = "1.35", features = ["rt"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cbindgen = "0.26"
